--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -422,114 +422,9 @@ However, using snowball sampling in an election survey introduces potential bias
   
 #  Idealized Questionnaire and Survey
 
-https://docs.google.com/forms/d/117wC8f1rBW_bd5glEdiR-7823-02A3HiD5EzQuT1GVw/edit
+A copy of the PDF of our survey can be found in other/datasheet/Poll Survey - Google Forms.pdf
 
-
-# Preamble
-
-## Title: 2024 Presidential Election Poll Data
-
-## Introduction: 
-
-Thank you for your participation in our $5,000 giveaway program. 
-
-For entry, please complete the survey in its entirety below. Please be informed that your answers are strictly confidential and will, under no circumstances, be shared with any party, group, or persons of affiliation. 
-
-$5,000 Cash Voucher Program Details: Completing the survey below qualifies as one entry into our giveaway. Each participant receives a unique entry identifier, and every entry will have an equal chance in our final random selection of the prize winner. Please note that each individual may complete only one survey.
-
-Referral Program: Our referral program offers you the chance to increase your odds of winning. After completing the survey, you’ll receive a unique referral code. If a friend or associate completes the survey using your code, your total number of entries doubles, effectively doubling your chances of winning the $5,000 prize.
-
-
-Finally, we wish to clarify that this survey is conducted purely for research purposes and is entirely unaffiliated with any political party, organization, or individual in a position of power. Our goal is to gain insight into the evolving political landscape and levels of public engagement.
-
-  
-
-## Referral Code (please ignore if inapplicable)
-
-## If you have entered a referral code above, please indicate the relationship with the referee from the best choice below.
-	Friend
-	Associate
-	Relative
-	Other…
-
-# Eligibility
-## Do you meet your state's residency requirements?
-	Yes
-	No (End Survey)
-	Please select "N/A" from the options below if you reside in North Dakota. 
-## Which of the following best describes you?
-	I am registered to vote
-	I am not registered to vote
-	I plan to register
-	N/A
-## Full Name (For identification of $5,000 cash winner)
-	Please type your response
-
-## From which state will you be casting your ballot for the presidential candidate?
-	Please select a state from the dropdown menu below
-## Where can we reach you when we announce the winner?
-	E-mail
-	Telephone
-	Other…
-## Contact information **We will not use this for any other purpose than to announce winners. It will only be used to reach our lucky winner for instructions on receiving the cash prize.**
-	Please type your response
-## Which of the following age groups best describes you?
-	18-25
-	26-31
-	32-40
-	41-50
-	51-60
-	61-80
-	81-125
-	Under 18
-## Which of the following best describes you?
-	American Indian or Alaskan Native
-	Asian
-	African American
-	Hispanic or Latino
-	Native Hawaiian or Pacific Islander
-	White
-	Middle Eastern or North African
-	Other…
-## What is your gender?
-	Male
-	Female
-	Prefer not to say
-	Other…
-## Which of the following situations best describe you?
-	I did not vote in the 2020 presidential election
-	I planned to vote but wasn’t able to
-	I voted in the 2020 presidential election
-## How likely are you to vote in the upcoming election from a scale of 1 to 3? 1 is very unlikely and 3 is very likely.
-	
-	1
-	2
-	3
-## Have you attended a presidential rally or their campaigns this year?
-	Yes
-	No
-	Only in the past
-## On a scale of 1 to 3, how closely do you follow the presidential race? 1 is not at all and 5 is very closely.
-	1
-	2
-	3
-	4
-	5
-
-# Party Affiliation
-## Which party do you prefer a candidate to be chosen from?
-	Democratic Party's candidate
-	Republican Party's candidate
-	Another Party's candidate
-## In the 2020 presidential election, who did you vote for?  If you did not vote, who would you have voted for?
-	Donald Trump
-	Joe Biden
-	Neither
-	Other…
-## If planning to vote, which presidential candidate are you planning to vote for? If you are abstaining, please select which candidate you feel more strongly about.
-	Donald Trump
-	Kamala Harris
-	Other...
+\includepdf[pages=-]{..other/datasheet/Poll Survey - Google Forms.pdf}
 
 \newpage
 
